--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,19 +1,10 @@
 [
     {
-      "name": "This Website :D",
-      "type": "Web",
-      "description": "A portfolio website to showcase my projects.",
-      "status": "In Progress",
-      "techStack": ["React", "Tailwind"],
-      "image": "portfolio.png",
-      "github": "https://github.com/stahsin00/portfolio.git"
-    },
-    {
       "name": "Purrfect Neighbors",
       "type": "Web",
       "description": "A community-driven app that connects pet owners for adoption, donation, and resource-sharing within their neighborhood.",
       "status": "Complete",
-      "techStack": ["React", "Node.js", "Express", "GraphQL", "MySQL", "Ant Design"],
+      "techStack": ["React", "Node.js", "Express", "GraphQL", "MySQL", "Redis", "Websocket", "Ant Design"],
       "image": "purrfect-neighbors.png",
       "github": "https://github.com/stahsin00/purrfect-neighbors",
       "link": "http://purrfect-neighbors.ca-central-1.elasticbeanstalk.com"
@@ -23,7 +14,7 @@
       "type": "Web",
       "description": "A productivity app that aims to gamify everyday tasks.",
       "status": "In Progress",
-      "techStack": ["React", "CSS", "ASP.Net Core", "MySQL"],
+      "techStack": ["React", "CSS", "ASP.Net Core", "MySQL", "Redis", "Websocket"],
       "image": "solara.png",
       "github": "https://github.com/stahsin00/Solara.git"
     },
@@ -47,6 +38,16 @@
       "link": "https://fluent-ify.netlify.app/"
     },
     {
+      "name": "Pixel Crawler",
+      "type": "Game",
+      "description": "A procedurally generated 2D platformer.",
+      "status": "In Progress",
+      "techStack": ["Unity"],
+      "image": "pixel-crawler.png",
+      "pixelated": "true",
+      "github": "https://github.com/stahsin00/pixel-crawler-prototype"
+    },
+    {
       "name": "Saunter",
       "type": "Web",
       "description": "An endless scrolling image gallery website meant to imitate the feeling of taking a stroll around the world.",
@@ -66,7 +67,7 @@
     {
       "name": "Cartographer",
       "type": "Game",
-      "description": "World generation using perlin noise to create a variety of landscapes for players to explore and collect resources. (Image rendering above is a temporary placeholder to show model.)",
+      "description": "World generation using perlin noise to create a variety of landscapes for players to explore and collect resources.",
       "status": "In Progress",
       "techStack": ["Unity"],
       "image": "cartographer.png"
@@ -77,7 +78,8 @@
       "description": "2D metroidvania where the player is a robot that is exploring a new planet.",
       "status": "Inactive",
       "techStack": ["Unity"],
-      "image": "rover.png"
+      "image": "rover.png",
+      "pixelated": "true"
     }
   ]
   
